@@ -2,6 +2,7 @@
  *
  * Copyright (c) 2000-2003 Intel Corporation 
  * All rights reserved. 
+ * Copyright (c) 2012 France Telecom All rights reserved. 
  *
  * Redistribution and use in source and binary forms, with or without 
  * modification, are permitted provided that the following conditions are met: 
@@ -102,7 +103,7 @@ int ListInit(LinkedList *list, cmp_routine cmp_func, free_function free_func)
 	list->tail.prev = &list->head;
 	list->tail.next = NULL;
 
-	return 0;
+	return retCode;
 }
 
 ListNode *ListAddHead(LinkedList *list, void *item)
